2011-07-08  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: Various compatibility fixes for use with wxWidgets 2.9.x.

2011-06-23  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed building with Sun Studio's C compiler.

2011-06-03  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: ISO 639-2 terminology language codes are
	converted to the corresponding bibliography code upon file
	identification (e.g. 'deu' is converted to 'ger').

2011-06-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: The timecode scale is retrieved first before
	applying it to the segment duration.

	* all: Added an Italian translation by Roberto Boriotti and
	Matteo Angelino (see AUTHORS).

2011-05-28  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed populating the 'compression' drop down box
	according to what mkvmerge was compiled with.

2011-05-26  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: When a DTS track is read from a source file
	that provides timecodes (e.g. Matroska files) then those timecodes
	will be preserved.

2011-05-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: Fixed remuxing certain VC1 video tracks from Matroska
	files. Fix for bug 636.

2011-05-23  Moritz Bunkus  <moritz@bunkus.org>

	* Released v4.8.0.

	* mmg: bug fix (Windows): mmg will no longer convert the "mkvmerge
	executable" from just "mkvmerge" into a full path name when
	writing its preferences to the registry upon existing.

	* mkvmerge: enhancement: Added support for VobSub IDX files with
	negative "delay" fields.

2011-05-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: The 'doc type read version' EBML header field
	is only set to 2 even if a stereo mode other than 'none' is used
	for at least one video track. Fix for bug 625.

2011-05-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvpropedit: new feature: Added support for adding, replacing
	and removing chapters.

2011-05-03  Moritz Bunkus  <moritz@bunkus.org>
